# Work1

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  tunnel.sh
Docs/: Calendar.md  DannFramework.md  git_commit_format.md
Docs/DannFramework_docs/: Phase 1: Project Planning & Problem Definition.md  Phase 2: Software Requirements Specification (SRS).md  Phase 3: Software Design.md  Phase 4: System Modeling (UML).md  Phase 5: SDLC Strategy.md  Phase 6: Deployment, Operations & Cost.md  Phase 7: Maintenance & Sustainability.md  Phase 8: Final Review Checklist.md
Docs/Versions/: README.md  Version 1.md  Version 2.md
Docs/Versions/Changelog/: README.md
Docs/api_docs/: README.md
backend/: dev.sh  pyproject.toml  seed.py
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  ingredients.py
backend/app/auth/: auth.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/crud/: __init__.py  ingredients.py
backend/app/models/: __init__.py  models.py
ui/: .env.local.example  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  requirements.txt  tailwind.config.js
ui/src/: App.jsx  main.jsx
ui/src/components/: AuthRedirect.jsx  ErrorBoundary.jsx  ErrorMessage.jsx  ErrorPage.jsx  ExampleButton.jsx  IngredientCard.jsx  LoadingSpinner.jsx  NavigationBar.jsx  PaginationControls.jsx  ProtectedRoute.jsx  ReduxCounter.jsx
ui/src/layouts/: MainLayout.jsx
ui/src/pages/: Home.jsx  IngredientDetail.jsx  Ingredients.jsx  Login.jsx  Register.jsx
ui/tests/: basic-flows.spec.js
(+73 files in other folders)
