[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dann <Lesterdannlopez7@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.125.0,<0.126.0"
uvicorn = ">=0.38.0,<0.39.0"
asyncpg = ">=0.31.0,<0.32.0"
sqlalchemy = ">=2.0.45,<3.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
